--- a/src/i18n/ohun_i18n.properties
+++ b/src/i18n/ohun_i18n.properties
@@ -17,6 +17,7 @@ config.page.configuration.error=Username and password must be specified
 config.page.configuration.restart.warning=Changes to any of these parameters requires a restart of the plugin.
 
 ohun.conference.summary=Below is an overview of conversations
+ohun.summary.no.conferences=No active audio conferences
 ohun.summary.conferences=Total Conferences
 ohun.summary.conference=Name
 ohun.summary.last.activity=Last Activity
