--- a/src/i18n/ohun_i18n.properties
+++ b/src/i18n/ohun_i18n.properties
@@ -1,6 +1,7 @@
 plugin.title=Kraken Settings
 plugin.title.description=Audio Conference Engine (Kraken SFU)
 
+config.page.connectivity.description=The public web application is currently being served at
 config.page.summary.title=Audio-Conf Summary
 config.page.summary.description=List of Kraken audio conferences
 config.page.settings.title=Audio-Conf Settings
